--- a/css/main.css
+++ b/css/main.css
@@ -714,11 +714,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-orange-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
-}
-
 .p-2 {
   padding: 0.5rem;
 }
@@ -863,7 +858,7 @@ body.dark {
   color: #cbd5e0;
 }
 
-body.dark h1, body.dark h2, body.dark h3 {
+body.dark h1, body.dark h2 {
   color: #e2e8f0;
 }
 
@@ -895,7 +890,7 @@ body.dark .text-green-950 {
   color: #68d391;
 }
 
-h1, h2, h3 {
+h1, h2 {
   color: #2c3e50;
 }
 
@@ -933,6 +928,18 @@ section {
   .text-5xl {
     font-size: 2.5rem;
   }
+}
+
+.skysync{
+  background: linear-gradient(to right, #0fabca, #ca0bca );
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+.queuebridge{
+  background: linear-gradient(to right, red, purple );
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
 #loading-screen {
@@ -1033,6 +1040,11 @@ section {
 .hover\:text-purple-500:hover {
   --tw-text-opacity: 1;
   color: rgb(168 85 247 / var(--tw-text-opacity));
+}
+
+.hover\:text-red-600:hover {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 
 .hover\:text-yellow-500:hover {
