--- a/css/main.css
+++ b/css/main.css
@@ -1052,6 +1052,11 @@ section {
   color: rgb(234 179 8 / var(--tw-text-opacity));
 }
 
+.active\:text-red-400:active {
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity));
+}
+
 @media (min-width: 768px) {
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
