--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@
 
 body {
     font-family: "Sour Gummy", sans-serif;
+    background-color: brown;
 }
 
 /* Dark Mode Styles */
@@ -94,7 +95,21 @@ color: transparent;
     color: transparent;
     }
 
+//dropdown
+@keyframes dropdownAnimation {
+    0% {
+      opacity: 0;
+      transform: translateY(-10px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
 
+  #dropdown-menu {
+    animation: dropdownAnimation 0.3s ease-out;
+  }
 
 
 #loading-screen {
