--- a/css/main.css
+++ b/css/main.css
@@ -1136,6 +1136,11 @@ section {
   color: rgb(234 179 8 / var(--tw-text-opacity));
 }
 
+.hover\:text-gray-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
 .active\:text-red-400:active {
   --tw-text-opacity: 1;
   color: rgb(248 113 113 / var(--tw-text-opacity));
