--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@
 
 
 body {
-    font-family: "Sour Gummy", sans-serif;
+    font-family: "Pixelify Sans", sans-serif;
 }
 
 /* Dark Mode Styles */
@@ -77,6 +77,7 @@ section {
     .w-1/2 {
         width: 100%;
     }
+    
     .text-5xl {
         font-size: 2.5rem;
     }
@@ -94,7 +95,7 @@ color: transparent;
     color: transparent;
     }
 
-//dropdown
+
 @keyframes dropdownAnimation {
     0% {
       opacity: 0;
